--- a/package.json
+++ b/package.json
@@ -1,18 +1,16 @@
 {
   "name": "react-file-reader-input",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "React file input component for complete control over styling and abstraction from file reading.",
   "main": "./lib/index.js",
   "devDependencies": {
     "babel": "^5.4.7",
     "babel-runtime": "^5.8.20",
-    "jsdom": "^3.1.2",
     "karma": "^0.13.9",
     "karma-browserify": "^4.3.0",
     "karma-firefox-launcher": "^0.1.6",
     "karma-mocha": "^0.2.0",
     "mocha": "^2.2.5",
-    "mocha-jsdom": "^1.0.0",
     "react": "^0.13.3"
   },
   "peerDependencies": {
@@ -21,7 +19,7 @@
   "scripts": {
     "build:lib": "babel --stage 0 src --out-dir lib",
     "pretest": "babel --stage 0 test.es6 -o test.js && npm run build:lib",
-    "test": "mocha test.js",
+    "test": "karma start",
     "prepublish": "npm run build:lib"
   },
   "repository": {
