--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "karma-firefox-launcher": "^0.1.6",
     "karma-mocha": "^0.2.0",
     "mocha": "^2.2.5",
+    "prop-types": "^15.5.10",
     "react": "^15.0.0",
     "react-dom": "*"
   },
