--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "babel-runtime": "^5.8.20",
     "karma": "^0.13.9",
     "karma-browserify": "^4.3.0",
+    "karma-chrome-launcher": "^2.2.0",
     "karma-firefox-launcher": "^0.1.6",
     "karma-mocha": "^0.2.0",
     "mocha": "^2.2.5",
     "prop-types": "^15.5.10",
     "react": "^15.0.0",
-    "react-dom": "*"
+    "react-dom": "^15.6.1"
   },
   "peerDependencies": {
     "react": "^15.0.0",
