--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "react-file-reader-input",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "React file input component for complete control over styling and abstraction from file reading.",
   "main": "./lib/index.js",
+  "dependencies": {
+    "prop-types": "^15.5.10"
+  },
   "devDependencies": {
     "babel": "^5.4.7",
     "babel-runtime": "^5.8.20",
@@ -12,7 +15,6 @@
     "karma-firefox-launcher": "^0.1.6",
     "karma-mocha": "^0.2.0",
     "mocha": "^2.2.5",
-    "prop-types": "^15.5.10",
     "react": "^15.0.0",
     "react-dom": "^15.6.1"
   },
