--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,12 @@
 {
   "presets": [
+    "flow",
     "react",
     "env"
   ],
   "plugins": [
     "transform-class-properties",
     "transform-es2015-classes",
-    "transform-object-rest-spread",
-    "transform-react-remove-prop-types"
+    "transform-object-rest-spread"
   ]
 }
